base game almost done and future gamemodes soon to be added

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
       <h1 id="name">Name That Badge</h1>
     </header>
 
+    <div class="gamemodes">
+      <button id="premGamemode" class="gamemodeButtons">All Time Premier League Teams</button>
+      <button id="laLigaGamemode" class="gamemodeButtons">All Time La Liga Teams</button>
+    </div>
+
     <div class="badges">
       <img id="clubBadge" src="" alt="" style="display: none;">
     </div>
@@ -31,10 +36,10 @@
     </div>
 
     <div class="options">
-      <button id="option1" class="optionBTN">option1</button>
-      <button id="option2" class="optionBTN">option2</button>
-      <button id="option3" class="optionBTN">option3</button>
-      <button id="option4" class="optionBTN">option4</button>
+      <button id="option1" class="optionBTN" style="display: none;">option1</button>
+      <button id="option2" class="optionBTN" style="display: none;">option2</button>
+      <button id="option3" class="optionBTN" style="display: none;">option3</button>
+      <button id="option4" class="optionBTN" style="display: none;">option4</button>
     </div>
 
   </div>
