base hiscore stats added

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
     <div class="scores">
       <h1 id="scoreDisplay" style="display: none;">0 / ???</h1>
+      <h1 class="hiScores" id="premHiScoreDisplay" style="display: block;"></h1>
+      <h1 class="hiScores" id="laLigaHiScoreDisplay" style="display: block;"></h1>
     </div>
 
     <div class="options">
