--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
   <link rel="stylesheet" href="style.css">
 
+  <link rel="shortcut icon" href="clubBadgesImages/favicon.png" type="image/x-icon">
+
 </head>
 
 <body>
