now can view all hiScores

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <div class="gamemodes">
       <button id="premGamemode" class="gamemodeButtons">All Time Premier League Teams</button>
       <button id="laLigaGamemode" class="gamemodeButtons">All Time La Liga Teams</button>
+      <button id="allHiscores" class="">All HiScores</button>
     </div>
 
     <div class="badges">
