--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
   <div class="wrapper">
     <header>
       <p id="homeButton"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#FFFFFF"><path d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z"/></svg></p>
-      <h1 id="name">Name That Badge</h1>
+      <h1 id="titleName">Name That Badge</h1>
     </header>
 
     <div class="gamemodes">
       <button id="premGamemode" class="gamemodeButtons">All Time Premier League Teams</button>
       <button id="laLigaGamemode" class="gamemodeButtons">All Time La Liga Teams</button>
-      <button id="allHiscores" class="">All HiScores</button>
+      <button id="allHiscores" class="">All Hi-Scores</button>
     </div>
 
     <div class="badges">
