added serie a gamemode

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <div class="gamemodes">
       <button id="premGamemode" class="gamemodeButtons">All Time Premier League Teams</button>
       <button id="laLigaGamemode" class="gamemodeButtons">All Time La Liga Teams</button>
+      <button id="serieAGamemode" class="gamemodeButtons">All Time Serie A Teams</button>
       <button id="allHiscores" class="">All Hi-Scores</button>
     </div>
 
@@ -38,6 +39,7 @@
       <h1 id="scoreDisplay" style="display: none;">0 / ???</h1>
       <h1 class="hiScores" id="premHiScoreDisplay" style="display: block;"></h1>
       <h1 class="hiScores" id="laLigaHiScoreDisplay" style="display: block;"></h1>
+      <h1 class="hiScores" id="serieAHiScoreDisplay" style="display: block;"></h1>
     </div>
 
     <div class="options">
